@@ -22,6 +22,8 @@ Contributions:
     * Ron Bickers -- countless suggestions, bugfixes, documentation
       additions, and code patches (too many to list).
      
+    * Francisco Sam Castillo -- QAdmin-TMDA web management utility.
+
     * Lou Hevly -- documentation (vpopmail tutorial).
 
     * Adam McKenna -- creator/maintainer of the Debian package.
