@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Nov 27 16:42:07 2001 -->
+<!-- Tue Nov 27 17:47:26 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -128,6 +128,15 @@ Author
 <TD VALIGN=TOP WIDTH="90%"><BR>
 <h3>TMDA FREQUENTLY ASKED QUESTIONS</h3>
 
+<li>How do I setup a whitelist? <br>
+<li>Will TMDA run on non-unix clients such as Microsoft Windows? <br>
+<li>Does TMDA have a web interface? <br>
+<li>How do I setup TMDA with vpopmail? <br>
+<li>How can I delete old, unconfirmed messages from TMDA's pending queue? <br>
+<li>How do I allow my ezmlm mailing lists to pass through TMDA? <br>
+<li>How can I prevent BBDB from asking about 'dated' addresses?<br>
+<br>
+
 <hr>
 <li><b>
 How do I setup a whitelist?  I'd like any address in
@@ -192,6 +201,18 @@ Also, here is one user's
 <a href="http://mla.libertine.org/tmda-users/200108/msg00002.html" TARGET="Resource Window">
 configuration details</a> 
 for a site-wide TMDA install using smtpd-auth, vpopmail and qmailadmin.
+
+<hr>
+<li><b>
+Does TMDA have a web interface?
+</b>
+<br><br>
+Yes.  <a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+a TMDA configuration and administration tool which integrates into the 
+<a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
+ web managment system.  For more information on QAdmin-TMDA's capabilities,
+see its <a href="http://mla.libertine.org/tmda-announce/200111/msg00002.html" TARGET="Resource Window">
+original announcement</a>.
 
 <hr>
 <li><b>
