@@ -9,6 +9,12 @@ Project Management Site at Sourceforge</a><br><br>
 <li><a href="http://www.apress.com/catalog/book/1893115402/" TARGET="Resource Window">
 The qmail Handbook</a> contains a section describing TMDA<br><br>
 
+<li>Francisco Sam Castillo's 
+<a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+a TMDA configuration and administration tool which integrates into the 
+<a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
+ web managment system.<br><br>
+
 <li>Lou Hevly has written a 
 <a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
 tutorial for installing TMDA with vpopmail</a><br><br>
