@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Nov 27 16:34:05 2001 -->
+<!-- Tue Nov 27 17:45:04 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -133,6 +133,12 @@ Project Management Site at Sourceforge</a><br><br>
 
 <li><a href="http://www.apress.com/catalog/book/1893115402/" TARGET="Resource Window">
 The qmail Handbook</a> contains a section describing TMDA<br><br>
+
+<li>Francisco Sam Castillo's 
+<a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+a TMDA configuration and administration tool which integrates into the 
+<a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
+ web managment system.<br><br>
 
 <li>Lou Hevly has written a 
 <a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
