@@ -1,7 +1,8 @@
 2001-11-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
-	* THANKS (Contributions): Add Lou Hevly.
-
+	* THANKS (Contributions): Add Lou Hevly and Francisco Sam
+	Castillo.
+	
 2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: Removed TODO.
